add new schedule class and new button

--- a/sr2_GUI/sr2_GUI.csproj
+++ b/sr2_GUI/sr2_GUI.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithms\Destinations.cs" />
+    <Compile Include="Algorithms\ScheduleTask.cs" />
     <Compile Include="Drawers\DrawInConsole.cs" />
     <Compile Include="Drawers\DrawInForm.cs" />
     <Compile Include="Drawers\IDrawing.cs" />
